grid fixed, general alignment fixes

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -6,6 +6,7 @@ html, body {
   padding: 0;
   display: block;
   line-height: 1.2;
+  min-height: 100vh;
 }
 html {
   background: #f1f1f1;
@@ -24,16 +25,23 @@ html {
   margin: auto;
 }
 .container {
-  padding: 3em;
+  margin: 1em 1em;
+  padding: 1em;
   display: grid;
   grid-gap: 2em;
   grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-
+}
 }
 .block {
-  display: flex;
-  flex-direction: column;
-  align-items: first;
+  max-width: 100%;
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+.project-container {
+  margin-top: 2em;
+  padding: 0 2em;
 }
 
 /*--- Header ---*/
@@ -43,21 +51,17 @@ header {
   padding: 16px;
 }
 nav {
+  margin: 1em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.brand {
-  flex-grow: 1;
-}
 
 /*--- Media ---*/
-img {
-  max-width: 100%;
-}
 .img-headshot {
   max-width: 440px;
-}.img-portrait {
+}
+.img-portrait {
   max-height: 620px;
  }
  .img-landscape {
@@ -68,6 +72,10 @@ img {
 }
 video {
   max-width: 440px;
+}
+img {
+  width: 100%;
+  overflow: hidden;
 }
 
 /* --- Typography settings --- */
@@ -107,13 +115,6 @@ button:hover {
 }
 
 /*--- Project area settings ---*/
-.project-container {
-  max-width: 920px;
-  padding: 3em;
-  margin-bottom: 48px;
-  display: flex;
-  flex-direction: column;
-}
 .project-description {
   margin: 16px 0;
   display: grid;
@@ -145,7 +146,7 @@ button:hover {
 }
 
 /*--- Media Query ---*/
-@media (min-width: 550px) {
+@media (min-width: 720px) {
   .span-2c {
     grid-column: auto / span 2;
   }
